--- a/WebContent/loi/index.html
+++ b/WebContent/loi/index.html
@@ -5,6 +5,8 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 		<link rel="stylesheet" href="./Views/css/style.css">
+		<link rel="icon" href="https://cdn0.iconfinder.com/data/icons/round-ui-icons/512/close_red.png" type="image/png" sizes="16x16">
+		<meta http-equiv="refresh" content="3; url=trang-chu.jsp">
 	</head>
 	<body>
 	<div class="wrap">
@@ -19,6 +21,7 @@
 			<p>Design by <a href="#">VHN</a></p>
 		</div>
 	</div>
+	
 	</body>
 </html>
 
