--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,11 +9,15 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="7">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">7,597</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">6</td><td class="num">0</td><td class="num">0</td><td class="num">26,624</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">Test.testGiaoDien</td><td><a href="#m0">moTrangChu</a></td><td rowspan="1">1508911761574</td><td rowspan="1">4101</td></tr><tr class="passedeven"><td><a href="#m1">moTrangDangNhap</a></td><td rowspan="1">1508911765677</td><td rowspan="1">3478</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="6">Test.testGiaoDien</td><td><a href="#m0">moTrangChu</a></td><td rowspan="1">1511191391583</td><td rowspan="1">4858</td></tr><tr class="passedeven"><td><a href="#m1">moTrangDangKy</a></td><td rowspan="1">1511191396443</td><td rowspan="1">4299</td></tr><tr class="passedeven"><td><a href="#m2">moTrangDangNhap</a></td><td rowspan="1">1511191400743</td><td rowspan="1">4024</td></tr><tr class="passedeven"><td><a href="#m3">testNutGioHang</a></td><td rowspan="1">1511191404769</td><td rowspan="1">4861</td></tr><tr class="passedeven"><td><a href="#m4">testNutSearch</a></td><td rowspan="1">1511191409631</td><td rowspan="1">4303</td></tr><tr class="passedeven"><td><a href="#m5">userLogin</a></td><td rowspan="1">1511191413935</td><td rowspan="1">4253</td></tr></tbody>
 </table>
 <h2>Default test</h2><h3 id="m0">Test.testGiaoDien#moTrangChu</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">Test.testGiaoDien#moTrangDangNhap</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">Test.testGiaoDien#moTrangDangKy</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">Test.testGiaoDien#moTrangDangNhap</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">Test.testGiaoDien#testNutGioHang</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m4">Test.testGiaoDien#testNutSearch</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m5">Test.testGiaoDien#userLogin</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
