--- a/test-output/index.html
+++ b/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\LeGia\AppData\Local\Temp\testng-eclipse--1526926487\testng-customsuite.xml</span>
+                    <span>C:\Users\LeGia\AppData\Local\Temp\testng-eclipse--1140036059\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -91,7 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">2 methods,   2 passed</span>
+                    <span class="method-stats">6 methods,   6 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -107,7 +107,27 @@
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="Test.testGiaoDien" hash-for-method="moTrangDangKy">moTrangDangKy</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
                         <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="Test.testGiaoDien" hash-for-method="moTrangDangNhap">moTrangDangNhap</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="Test.testGiaoDien" hash-for-method="testNutGioHang">testNutGioHang</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="Test.testGiaoDien" hash-for-method="testNutSearch">testNutSearch</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="Test.testGiaoDien" hash-for-method="userLogin">userLogin</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -137,9 +157,37 @@
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
+                  <a name="moTrangDangKy">
+                  </a> <!-- moTrangDangKy -->
+                  <span class="method-name">moTrangDangKy</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
                   <a name="moTrangDangNhap">
                   </a> <!-- moTrangDangNhap -->
                   <span class="method-name">moTrangDangNhap</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="testNutGioHang">
+                  </a> <!-- testNutGioHang -->
+                  <span class="method-name">testNutGioHang</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="testNutSearch">
+                  </a> <!-- testNutSearch -->
+                  <span class="method-name">testNutSearch</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="userLogin">
+                  </a> <!-- userLogin -->
+                  <span class="method-name">userLogin</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -147,7 +195,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\LeGia\AppData\Local\Temp\testng-eclipse--1526926487\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\LeGia\AppData\Local\Temp\testng-eclipse--1140036059\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -196,20 +244,36 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(2);
+data.addRows(6);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'moTrangChu')
+data.setCell(0, 1, 'testNutGioHang')
 data.setCell(0, 2, 'Test.testGiaoDien')
-data.setCell(0, 3, 4101);
+data.setCell(0, 3, 4861);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'moTrangDangNhap')
+data.setCell(1, 1, 'moTrangChu')
 data.setCell(1, 2, 'Test.testGiaoDien')
-data.setCell(1, 3, 3478);
+data.setCell(1, 3, 4858);
+data.setCell(2, 0, 2)
+data.setCell(2, 1, 'testNutSearch')
+data.setCell(2, 2, 'Test.testGiaoDien')
+data.setCell(2, 3, 4303);
+data.setCell(3, 0, 3)
+data.setCell(3, 1, 'moTrangDangKy')
+data.setCell(3, 2, 'Test.testGiaoDien')
+data.setCell(3, 3, 4299);
+data.setCell(4, 0, 4)
+data.setCell(4, 1, 'userLogin')
+data.setCell(4, 2, 'Test.testGiaoDien')
+data.setCell(4, 3, 4253);
+data.setCell(5, 0, 5)
+data.setCell(5, 1, 'moTrangDangNhap')
+data.setCell(5, 2, 'Test.testGiaoDien')
+data.setCell(5, 3, 4024);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 7 seconds</span>
+              <span class="suite-total-time">Total running time: 26 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -241,8 +305,24 @@ return data;
                 <span class="method-start">0 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
+                <span class="method-name">moTrangDangKy</span>
+                <span class="method-start">4860 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
                 <span class="method-name">moTrangDangNhap</span>
-                <span class="method-start">4103 ms</span>
+                <span class="method-start">9160 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">testNutGioHang</span>
+                <span class="method-start">13186 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">testNutSearch</span>
+                <span class="method-start">18048 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">userLogin</span>
+                <span class="method-start">22352 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
